<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" 
	android:layout_width="match_parent" 
	android:layout_height="match_parent" 
	tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/textView1"
        android:text="@string/example_checkbox"/>
    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignLeft="@+id/textView1" 
        android:layout_below="@+id/textView1" 
        android:layout_marginTop="88dp"
        android:name="@string/check_one"/>
    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignLeft="@+id/checkBox1" 
        android:layout_below="@+id/checkBox1" 
        android:layout_marginTop="22dp"
        android:name="@string/check_two"/>
    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true" 
        android:layout_below="@+id/checkBox2" 
        android:layout_marginTop="24dp"
        android:name="@string/check_three"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_alignLeft="@+id/checkBox1" 
        android:layout_below="@+id/textView1" 
        android:layout_marginTop="39dp" 
        android:text="@string/example_question"/>
</RelativeLayout>
